<resources>

    <!-- Phi Nhai Dai Front Page -->
    <string name="app_name">Phi_Nhai_Dai</string>
    <string name="start">&gt;</string>
    <string name="short_app_name">PND</string>
    <string name="bottom_app_name">Phi Nhai Dai (PND)</string>
    <string name="description">PHI NHAI DAI is an Android mobile application that aims to assist in travel-related problems. This application will provides the vacation’s information which can help to decide where to go.</string>
    <string name="front_page_pic">Front Page Pic</string>

    <string name="title">Title</string>

    <string name="travel">travel</string>
    <string name="rating_number">4.5</string>

    <!-- Favorite Page -->
    <string name="favorite_title">FAVORITE</string>

    <!--  Discover Page  -->
    <string name="discover_title">DISCOVER</string>
    <string name="choose_category">Province</string>

    <!--    Example-->
    <string name="title_example">Mae Fah Luang</string>
    <string name="location_example">Chiang Rai, Thailand</string>
    <string name="description_tag">Description</string>
    <string name="long_description">The royal residence of HRH the late Princess Mother formerly served as her base of operations to monitor the work progress at the Doi Tung Development Project.</string>
    <string name="long_description_thai">ตั้งอยู่ด้านหน้าพระตำหนักดอยตุง บนพื้นที่ 10 ไร่ เต็มไปด้วยสวนดอกไม้เมืองหนาวที่พร้อมใจกันเบ่งบานอวดความสวยงาม เช่น กุหลาบ พิทูเนีย และบีโกเนีย</string>
    <string name="rating_score">4.5</string>

    <!--    Picture Description-->
    <string name="location_icon">location icon</string>
    <string name="star_icon">star icon</string>
    <string name="fav_icon">favorite icon</string>
    <string name="title_activity_nav_drawer">Nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="picture">Picture</string>

    <string name="menu_aboutus">ABOUT US</string>
    <string name="menu_discover">DISCOVER</string>
    <string name="menu_favorite">FAVORITE</string>

    <string name="name">Navigation Drawer</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- Food Recommendation Page -->
    <string name="choose_category_test">Choose Category</string>
    <string name="northern">Northern</string>
    <string name="central">Central</string>
    <string name="eastern">Eastern</string>
    <string name="southern">Southern</string>
    <string name="beverages">Beverages</string>
    <string name="choose_nationality">Choose Nationality</string>

</resources>
