<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bottom_background_front_page"
        android:layout_width="411dp"
        android:layout_height="400dp"
        android:background="@drawable/cream_box_bottomcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/top_background_front_page"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/brown_box_bottomcorner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PND"
    android:layout_width="130dp"
    android:layout_height="87dp"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/short_app_name"
    android:textColor="@color/secondary"
    android:textSize="60sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.25" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/PND"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/PND"
        app:layout_constraintTop_toBottomOf="@+id/PND" />

    <TextView
        android:id="@+id/bottom_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/bottom_app_name"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_background_front_page" />

    <TextView
        android:id="@+id/description"
        android:layout_width="329dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/description"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_background_front_page"
        app:layout_constraintEnd_toEndOf="@+id/bottom_app_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bottom_app_name"
        app:layout_constraintTop_toBottomOf="@+id/bottom_app_name"
        app:layout_constraintVertical_bias="0.015" />

</androidx.constraintlayout.widget.ConstraintLayout>