<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/card_description_top"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:background="@drawable/cream_box_frontpage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/card_description_bottom"
        android:layout_width="411dp"
        android:layout_height="310dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/brown_box"
        app:layout_constraintBottom_toBottomOf="@+id/card_description_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_example"
        android:textSize="35sp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_description_bottom" />

<!--    contentDescription needs to inspect-->
    <ImageView
        android:id="@+id/place_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location_example"
        app:layout_constraintEnd_toEndOf="@+id/description_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/description_title"
        app:layout_constraintTop_toBottomOf="@+id/description_title"
        app:srcCompat="@drawable/location" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_example"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/secondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/description_title"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toEndOf="@+id/place_icon"
        app:layout_constraintTop_toBottomOf="@+id/description_title" />

    <!--    contentDescription needs to inspect-->
    <ImageView
        android:id="@+id/star_rating"
        android:layout_width="21dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/rating_score"
        app:layout_constraintEnd_toEndOf="@+id/place_icon"
        app:layout_constraintStart_toStartOf="@+id/place_icon"
        app:layout_constraintTop_toBottomOf="@+id/place_icon"
        app:srcCompat="@drawable/star" />

    <TextView
        android:id="@+id/rating_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/rating_score"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/secondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/location"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/star_rating"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/description_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/description_tag"
        android:textColor="@color/secondary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/rating_score"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/star_rating"
        app:layout_constraintTop_toBottomOf="@+id/star_rating" />

    <TextView
        android:id="@+id/long_description"
        android:layout_width="376dp"
        android:layout_height="81dp"
        android:text="@string/long_description"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="@+id/description_tag"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/description_tag"
        app:layout_constraintTop_toBottomOf="@+id/description_tag" />



</androidx.constraintlayout.widget.ConstraintLayout>